# ims2tif

./: .gitignore  CMakeLists.txt  Dockerfile.alpine39.build  README.md  args.cpp  ctng-toolchain  cvt_bigload.cpp  cvt_chunk.cpp  cvt_hyperslab.cpp  cvt_opencl.cpp  ims.cpp  ims2tif.cpp  ims2tif.hpp  tiff.cpp
build-docker/: Dockerfile  build.sh
winharness/: CMakeLists.txt  README.md
winharness/cmake/modules/: FindHDF5.cmake  FindTIFF.cmake
